// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Snap render Message -- props className 1`] = `
<div
  class="at-message at-message--hidden at-message--info test"
>
  
</div>
`;

exports[`Message Snap render Message -- props customStyle 1`] = `
<div
  class="at-message at-message--hidden at-message--info"
  style="color: red;"
>
  
</div>
`;

exports[`Message Snap render initial Message 1`] = `
<div
  class="at-message at-message--hidden at-message--info"
>
  
</div>
`;

exports[`Message Snap render opened Message -- props duration : 0  1`] = `
<div
  class="at-message at-message--show at-message--info"
>
  
</div>
`;
